mlflow and fixed the model trainer

--- a/notebook/Model_Training.ipynb
+++ b/notebook/Model_Training.ipynb
@@ -1189,64 +1189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1888 entries, 0 to 1887\n",
-      "Data columns (total 41 columns):\n",
-      " #   Column              Non-Null Count  Dtype  \n",
-      "---  ------              --------------  -----  \n",
-      " 0   campaign_id         1888 non-null   int64  \n",
-      " 1   sender              1888 non-null   int64  \n",
-      " 2   subject_len         1888 non-null   float64\n",
-      " 3   body_len            1888 non-null   int64  \n",
-      " 4   mean_paragraph_len  1888 non-null   float64\n",
-      " 5   category            1888 non-null   int64  \n",
-      " 6   product             1888 non-null   int64  \n",
-      " 7   no_of_CTA           1888 non-null   float64\n",
-      " 8   mean_CTA_len        1888 non-null   int64  \n",
-      " 9   is_image            1888 non-null   int64  \n",
-      " 10  is_quote            1888 non-null   int64  \n",
-      " 11  is_timer            1888 non-null   int64  \n",
-      " 12  is_emoticons        1888 non-null   int64  \n",
-      " 13  target_audience     1888 non-null   int64  \n",
-      " 14  click_rate          1888 non-null   float64\n",
-      " 15  is_weekend_1        1888 non-null   int64  \n",
-      " 16  is_weekend_2        1888 non-null   int64  \n",
-      " 17  is_personalised_1   1888 non-null   int64  \n",
-      " 18  is_personalised_2   1888 non-null   int64  \n",
-      " 19  is_discount_1       1888 non-null   int64  \n",
-      " 20  is_discount_2       1888 non-null   int64  \n",
-      " 21  is_price_1          1888 non-null   int64  \n",
-      " 22  is_price_2          1888 non-null   int64  \n",
-      " 23  is_price_3          1888 non-null   int64  \n",
-      " 24  is_price_4          1888 non-null   int64  \n",
-      " 25  is_price_5          1888 non-null   int64  \n",
-      " 26  is_price_6          1888 non-null   int64  \n",
-      " 27  is_price_7          1888 non-null   int64  \n",
-      " 28  is_price_8          1888 non-null   int64  \n",
-      " 29  is_urgency_1        1888 non-null   int64  \n",
-      " 30  is_urgency_2        1888 non-null   int64  \n",
-      " 31  day_of_week_1       1888 non-null   int64  \n",
-      " 32  day_of_week_2       1888 non-null   int64  \n",
-      " 33  day_of_week_3       1888 non-null   int64  \n",
-      " 34  day_of_week_4       1888 non-null   int64  \n",
-      " 35  day_of_week_5       1888 non-null   int64  \n",
-      " 36  day_of_week_6       1888 non-null   int64  \n",
-      " 37  day_of_week_7       1888 non-null   int64  \n",
-      " 38  times_of_day_1      1888 non-null   int64  \n",
-      " 39  times_of_day_2      1888 non-null   int64  \n",
-      " 40  times_of_day_3      1888 non-null   int64  \n",
-      "dtypes: float64(4), int64(37)\n",
-      "memory usage: 604.9 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_train.drop(columns=['campaign_id'],inplace=True)"
    ]
@@ -1260,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,15 +1226,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train (1510, 14) (1510,)\n",
-      "Validation (378, 14) (378,)\n"
+      "Train (1510, 39) (1510,)\n",
+      "Validation (378, 39) (378,)\n"
      ]
     }
    ],
@@ -1300,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,19 +1259,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mX_train\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 1.67151907, -0.6215672 ,  1.78139195, ..., -0.55848249,\n",
+       "        -0.25471575,  0.65258981],\n",
+       "       [-0.43005778, -1.24797418,  0.29026212, ..., -0.55848249,\n",
+       "        -0.25471575,  0.65258981],\n",
+       "       [-0.43005778,  0.33892351, -1.07534759, ..., -0.55848249,\n",
+       "        -0.25471575,  0.65258981],\n",
+       "       ...,\n",
+       "       [-0.43005778,  1.13237236, -0.07365375, ..., -0.55848249,\n",
+       "        -0.25471575,  0.65258981],\n",
+       "       [ 1.67151907, -1.24797418, -0.95784594, ..., -0.55848249,\n",
+       "        -0.25471575,  0.65258981],\n",
+       "       [-0.43005778, -0.16220207, -0.04620586, ..., -0.55848249,\n",
+       "        -0.25471575,  0.65258981]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
