EDA file is edited

--- a/notebook/EDA_Click_Rate.ipynb
+++ b/notebook/EDA_Click_Rate.ipynb
@@ -1674,6 +1674,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Heatmap clearly suggests that it is a non linear data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
